test/pass/ClassHiddenPass.curry
module ClassHiddenPass where

import ClassHiddenExport

instance A Bool where
  methodA = True
